# homework

ros2_moveit_ws/ros2_moveit_ws/: .gitignore  README.md
ros2_moveit_ws/ros2_moveit_ws/src/my_moveit_pkg/: CMakeLists.txt  package.xml
ros2_moveit_ws/ros2_moveit_ws/src/my_moveit_pkg/launch/: demo.launch.py
ros2_moveit_ws/ros2_moveit_ws/src/my_moveit_pkg/src/: moveit_demo.cpp
