<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_moveit_pkg</name>
  <version>0.0.0</version>
  <description>MoveIt2 demo package</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclcpp</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
